# LassieRAG

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: E2E_Evaluation.ipynb
lassie/: utils.py
lassie/core/data_reader/: __init__.py  factory.py
lassie/core/evaluation/: __init__.py  runner.py  utils.py
lassie/core/evaluation/metric/ragas/: context_relevance.py  faithfulness.py  prompt.py  response_relevance.py
lassie/core/indices/: __init__.py  base.py  factory.py  opensearch.py
lassie/core/model_loader/: __init__.py  base.py  factory.py  hf_loader.py  openai_like_loader.py
lassie/core/model_loader/embeddings/: openai_like.py
lassie/core/node_transformer/: __init__.py  chunking.py  factory.py
lassie/core/postprocessor/: __init__.py  factory.py
lassie/core/prompts/: chat_prompts.py  default_prompts.py  selectors.py  utils.py
lassie/core/query_engine/: __init__.py  builder.py
lassie/core/retriever/: __init__.py  builder.py
lassie/core/synthesizer/: __init__.py  builder.py  factory.py  multiqa.py
scripts/: chunk_exp.sh  chunking_experiment.py  rag_config.yml
tests/evaluation/: test_metric.py  test_runner.py  test_utils.py
